renkko/default/website/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "www.senk0.com"
    - "renkko.senk0.com"
  rules:
    - backendRefs:
        - name: nginx
          port: 80
